--- a/project/www/css/style.css
+++ b/project/www/css/style.css
@@ -1,5 +1,5 @@
-.favorite ons-list ons-list-item{
-    font-size: 30px;
+.favorite {
+    font-size: 27px;
     margin:10px auto;
     padding: 10px;
 }
